<resources>
    <string name="app_name">Dr.Nitin Educare</string>
    <string name="search_hint">Search by name/roll number</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="divisionsString">Divisions</string>
    <string name="notice_description">Description</string>
    <string name="pin_content_desc">PIN input field</string>
    <string name="title_activity_take_attendance">TakeAttendance</string>
    <string name="dummy_button">Save</string>
    <string name="start_button">Start</string>
    <string name="add_button">Add</string>
    <string name="proceed_button">Proceed</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="final_q">Questions</string>
    <string name="new_test">New Test</string>
    <string name="new_paper">New Paper</string>
    <string name="finalise_test">Finalise Test</string>
    <string name="new_notice">New Notice</string>
    <string name="new_homework">Homework</string>
    <string name="new_timetable">New Timetable</string>
    <string name="title_activity_tests_list">Scheduled Tests</string>
    <string name="select_class_prompt">Select Class</string>
    <string name="error_message">Something Went Wrong Please Try Again Later...</string>
    <string name="validation_image_size_msg">cannot upload more than 5 MB image file</string>
    <string name="validation_video_size_msg">cannot upload more than 15 MB video file</string>
    <string name="file_size_is_large_validation">File is more than 10 MB may be it take more time to
        upload
    </string>
    <string name="extension_validation">Invalid file format</string>

    <string-array name="class_arrays">
        <item>Select Class</item>
        <item>All</item>
        <item>8th Std</item>
        <item>9th Std</item>
        <item>10th Std</item>
        <item>11th Std</item>
        <item>12th Std</item>
    </string-array>
    <string name="select_division_prompt">Select Class Division</string>
    <string-array name="division_arrays">
        <item>Select Division</item>
        <item>Div A</item>
        <item>Div B</item>
    </string-array>
    <string-array name="subject_arrays">
        <item>Select Subject</item>
    </string-array>
    <string-array name="level_arrays">
        <item>Select Difficulty Level</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>


    <string name="swipe_left">Previous Q</string>
    <string name="swipe_right">Next Q</string>
    <string name="finish_test">View Result</string>
    <string name="view_swiped_left">%1$s swiped to left!</string>
    <string name="view_swiped_right">%1$s swiped to right!</string>
    <string name="dummy_text">Who is making the Web Standards?</string>
    <string name="dummy_fab">Fab Test</string>

    <string name="reset">Reset stack</string>
    <string name="stack_reset">Stack reset!</string>
    <string name="stack_empty">Card stack empty!</string>
    <string name="title_retry">Try Again!</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>


    <string name="ui_ux_designer">UI/UX Designer</string>
    <string name="my_desc">Doing at the sweet spot between aesthetics and elegance to give life to your brand.My opinion belong to nobody but myself.</string>
    <string name="about_me">About Me</string>
    <string name="contact">Contact</string>
    <string name="skills">Skills</string>
    <string name="ratings">Marks</string>
    <string name="job_success">Test Completed</string>
    <string name="samplereview">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pretium bibendum sapien, ut euismod massa. Duis convallis sem sed turpis elementum auctor.</string>

    <string name="red">RED</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="resend_text"><u>Resend</u></string>
</resources>
