<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewHomeworkActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <RelativeLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:padding="20dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_below="@id/tvTitle"
            android:scrollbars="none"
            android:layout_above="@id/saveButton"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="20dp"
                android:weightSum="1">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/selectClass"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/layout_border"
                    android:entries="@array/class_arrays"
                    android:fontFamily="@font/opensansregular"
                    android:prompt="@string/select_class_prompt"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/selectDivision"
                    android:layout_marginTop="20dp"
                    android:visibility="gone"
                    android:background="@drawable/layout_border"
                    android:prompt="@string/select_division_prompt"
                    android:entries="@array/division_arrays"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/title_edit_text"
                        style="@style/RegistrationEditTextStyle"
                        android:singleLine="true"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/opensansregular"
                        android:hint="Timetable Title"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/attachment"
                        android:textSize="15sp"
                        android:fontFamily="@font/opensansregular"
                        android:text="Attachment (If have)"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <ImageView
                        android:id="@+id/attachmentIcon"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_attach_file_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:id="@+id/selectedFileText"
                        android:layout_width="wrap_content"
                        android:textSize="10sp"
                        android:fontFamily="@font/opensanssemibold"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <ImageView
                    android:layout_marginTop="20dp"
                    android:id="@+id/imageView"
                    android:scaleType="fitXY"
                    android:layout_width="match_parent"
                    android:layout_height="150dp" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/twitter"
            android:fontFamily="@font/opensansbold"
            android:text="@string/dummy_button"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </RelativeLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
</FrameLayout>